libs/modkit/macros/tests/ui/fail/missing_name.rs
use modkit_macros::module;

#[module(caps=[stateful])]
pub struct X;

fn main() {}
